tests/unit/evaluation/minizinc/regression/bug70.exp7
x = array1d(1..3, [1, 3, 2]);
----------
